--- a/mobile/10Aug2015-mobile1.html
+++ b/mobile/10Aug2015-mobile1.html
@@ -287,24 +287,27 @@ Ensure that the overall size of page is appropriate to the memory limitations of
       </div><!-- closes colmd12 -->
       <div class="col-md-4">
         <h3>Image One: Console Tool</h3>
+        <h4>Note: Image Commented Out</h4>
         <figure id="fig1">
-        <img id="img1" src="http://cook-my-catch.com/T3special/ConsoleTool-1.gif" class="img-responsive" alt="Screenshot showing use of a browser console tool, in this case showing error messages of failed script delivery.">
+        <!-- <img id="img1" src="http://cook-my-catch.com/T3special/ConsoleTool-1.gif" class="img-responsive" alt="Screenshot showing use of a browser console tool, in this case showing error messages of failed script delivery."> -->
         <figcaption id="figcaptionimg1">Using Chrome Console Tool in Browser</figcaption>
         </figure>
         <h4>Captions are displayed on the web page, but not in outline view.  Alt text is necessary for screen-readers.</h4>
       </div><!-- closes colmd4 -->
       <div class="col-md-4">
           <h3>Image Two: W3C Nu Validator</h3>
+          <h4>Note: Image Commented Out</h4>
           <figure id="fig2">
-        <img id="img2" src="http://cook-my-catch.com/T3special/NuChecker-1.gif" class="img-responsive" alt="Screenshot showing the interface for the NuValidator.">
+        <!-- <img id="img2" src="http://cook-my-catch.com/T3special/NuChecker-1.gif" class="img-responsive" alt="Screenshot showing the interface for the NuValidator."> -->
         <figcaption id="figcaptionimg2">Interface for W3C NuValidator for HTML5</figcaption>
         </figure>
         <h4>This is the validator recommended for validating HTML5</h4>
       </div><!-- closes md4 -->
       <div class="col-md-4">
           <h3>Image Three: W3C Validator</h3>
+          <h4>Note: Image Commented Out</h4>
           <figure id="fig3">
-        <img id="img3" src="http://cook-my-catch.com/T3special/W3CChecker-1.gif" class="img-responsive" alt="Screenshot showing interface for standard W3C validator.">
+        <!-- <img id="img3" src="http://cook-my-catch.com/T3special/W3CChecker-1.gif" class="img-responsive" alt="Screenshot showing interface for standard W3C validator."> -->
         <figcaption id="figcaptionimg3">Standard W3C Validator</figcaption>
         </figure>
         <h4>Older validator for HTML</h4>
